# tesla-order-status

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  messages.pot  pyproject.toml
.github/: copilot-instructions.md
.github/linters/: .htmlhintrc
.github/workflows/: ci.yml
app/: __main__.py  constants.py  i18n.py  main.py  metrics.py  monitor.py  tesla_stores.py  utils.py  vin_decoder.py
app/static/: sw.js
app/static/js/: app-init.js  change-watcher.js  history-store.js  sw-register.js  token-storage.js
app/templates/: _macros.html  base.html  callback_success.html  history.html  index.html  login.html  logout.html
app/translations/en/LC_MESSAGES/: messages.mo  messages.po
app/translations/nl/LC_MESSAGES/: messages.mo  messages.po
docs/: TECHNICAL_GUIDE.md
fixtures/: sample_orders_state1.json  sample_orders_state2.json
scripts/: run_super_linter.py  validate_vin_decoder.py
