[tool.poetry]
name = "tesla-order-status"
version = "1.3.0"
description = "A web application to track Tesla order status"
authors = ["Mariano Rivera <rivsoft@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
requests = "^2.31.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
changelog_file = "CHANGELOG.md"
build_command = ""
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.commit]
commit_message = "chore(release): v{version} [skip ci]"

[tool.semantic_release.publish]
upload_to_pypi = false
upload_to_vcs_release = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
